--- a/.github/workflows/python-testing.yml
+++ b/.github/workflows/python-testing.yml
@@ -14,13 +14,9 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.7
-    - name: Add conda to system path
-      run: |
-        # $CONDA is an environment variable pointing to the root of the miniconda directory
-        echo $CONDA/bin >> $GITHUB_PATH
     - name: Install dependencies
       run: |
-        conda env update --file ./Backend/environment.yml
+        pip install ./Backend/environments.txt
     - name: Lint with flake8
       run: |
         conda install flake8
