--- a/.github/workflows/python-testing.yml
+++ b/.github/workflows/python-testing.yml
@@ -1,4 +1,4 @@
-name: Python Package using Conda
+name: Python Package testing
 
 on: [push]
 
@@ -14,7 +14,10 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.7
-    - name: Install dependencies
+    - name: Install system wide dependencies
+      run: |
+        sh ./Backend/setup.sh
+    - name: Install pip dependencies
       run: |
         pip install -r ./Backend/requirements.txt
     - name: Lint with flake8
