--- a/.github/workflows/python-testing.yml
+++ b/.github/workflows/python-testing.yml
@@ -16,7 +16,7 @@ jobs:
         python-version: 3.7
     - name: Install system wide dependencies
       run: |
-        sh ./Backend/setup.sh
+        bash ./Backend/setup.sh
     - name: Install pip dependencies
       run: |
         pip install -r ./Backend/requirements.txt
