--- a/Backend/feature/default/default_config.ini
+++ b/Backend/feature/default/default_config.ini
@@ -3,17 +3,21 @@ speaker_name =
 server_url = 
 project_root = /home/Documents/xiarong
 
-# NOTE:     Please save the file/folder path relative from Backend/
+# NOTE:     Please save the file/folder path relative to Backend/
 #           to insert a new path, be sure to add ",\n" to the previous path
-# EXAMPLE:  feature/data/*.txt is acceptable but
-#           Backend/log/*.txt is not
+#           For files to restore the format is "${path_file_to_restore} ${path_default_file}"
+#           the default file (second path) will replace the content of the working file (first path)
+# EXAMPLE:  
+# files_to_delete   = feature/example/to/delete_1,
+#                     feature/example/to/delete_2,
+# folders_to_clean  = feature/example/folder_1,
+#                     feature/example/folder_2
+# files_to_restore  = feature/example/current_file_1 feature/default/default_file_1,
+#                     feature/example/current_file_2 feature/default/default_file_2
 [File Path]
-files_to_delete =   example/to/delete/a,
-
-folders_to_clean =  example/folder1,
-
-files_to_restore =  example/to/restore,
-
+files_to_delete   = 
+folders_to_clean  = 
+files_to_restore  = 
 
 [API]
 
