add: now able to restore /etc/wpa_supplicant

--- a/Backend/feature/config.ini
+++ b/Backend/feature/config.ini
@@ -6,7 +6,7 @@ project_root = /home/Documents/xiarong
 [File Path]
 files_to_delete = 
 folders_to_clean = 
-files_to_restore = 
+files_to_restore = /etc/wpa_supplicant/ feature/default/wpa_supplicant.config
 
 [API]
 
