--- a/Backend/feature/default/default_config.ini
+++ b/Backend/feature/default/default_config.ini
@@ -17,7 +17,7 @@ project_root = /home/Documents/xiarong
 [File Path]
 files_to_delete   = 
 folders_to_clean  = 
-files_to_restore  = 
+files_to_restore  = /etc/wpa_supplicant/ feature/default/wpa_supplicant.config
 
 [API]
 
