add: now able to delete AlarmList.json

--- a/Backend/feature/config.ini
+++ b/Backend/feature/config.ini
@@ -4,9 +4,9 @@ server_url =
 project_root = /home/Documents/xiarong
 
 [File Path]
-files_to_delete = 
+files_to_delete = feature/AlarmList.json
 folders_to_clean = 
-files_to_restore = /etc/wpa_supplicant/test_wpa_supplicant.conf feature/default/wpa_supplicant.conf
+files_to_restore = /etc/wpa_supplicant/wpa_supplicant.conf feature/default/wpa_supplicant.conf
 
 [API]
 
