--- a/Backend/feature/default/default_config.ini
+++ b/Backend/feature/default/default_config.ini
@@ -15,9 +15,9 @@ project_root = /home/Documents/xiarong
 # files_to_restore  = feature/example/current_file_1 feature/default/default_file_1,
 #                     feature/example/current_file_2 feature/default/default_file_2
 [File Path]
-files_to_delete   = 
+files_to_delete   = feature/AlarmList.json
 folders_to_clean  = 
-files_to_restore  = /etc/wpa_supplicant/test_wpa_supplicant.config feature/default/wpa_supplicant.config
+files_to_restore  = /etc/wpa_supplicant/wpa_supplicant.config feature/default/wpa_supplicant.config
 
 [API]
 
