feat: now able to send log file and device_data delete request

--- a/Backend/feature/config.ini
+++ b/Backend/feature/config.ini
@@ -3,13 +3,23 @@ speaker_name =
 server_url = 
 project_root = /home/Documents/xiarong
 
+# NOTE:     Please save the file/folder path relative to Backend/
+#           to insert a new path, be sure to add ",\n" to the previous path
+#           For files to restore the format is "${path_file_to_restore} ${path_default_file}"
+#           the default file (second path) will replace the content of the working file (first path)
+# EXAMPLE:  
+# files_to_delete   = feature/example/to/delete_1,
+#                     feature/example/to/delete_2,
+# folders_to_clean  = feature/example/folder_1,
+#                     feature/example/folder_2
+# files_to_restore  = feature/example/current_file_1 feature/default/default_file_1,
+#                     feature/example/current_file_2 feature/default/default_file_2
 [File Path]
-files_to_delete = feature/AlarmList.json
-folders_to_clean = 
-files_to_restore = /etc/wpa_supplicant/wpa_supplicant.conf feature/default/wpa_supplicant.conf
+files_to_delete   = feature/AlarmList.json
+folders_to_clean  = 
+files_to_restore  = /etc/wpa_supplicant/wpa_supplicant.config feature/default/wpa_supplicant.config
 
 [API]
 
 [Status]
-serverpairremovecompleted = False
-
+serverPairRemoveCompleted = true
