--- a/Backend/feature/default/default_config.ini
+++ b/Backend/feature/default/default_config.ini
@@ -17,7 +17,7 @@ project_root = /home/Documents/xiarong
 [File Path]
 files_to_delete   = feature/AlarmList.json
 folders_to_clean  = 
-files_to_restore  = /etc/wpa_supplicant/wpa_supplicant.config feature/default/wpa_supplicant.config
+files_to_restore  = /etc/wpa_supplicant/wpa_supplicant.conf feature/default/wpa_supplicant.conf
 
 [API]
 
